--- a/src/app/styles/TodoItem.module.scss
+++ b/src/app/styles/TodoItem.module.scss
@@ -1,3 +1,4 @@
+@use 'variables' as *; // 引入變數
 .todoItem {
   display: flex;
   justify-content: space-between;
@@ -10,7 +11,7 @@
   }
 
   .deleteButton {
-    background: red;
+    background: $secondary-color;
     color: white;
     border: none;
     padding: 5px 10px;
@@ -18,7 +19,7 @@
     border-radius: 4px;
 
     &:hover {
-      background: darkred;
+      background: $secondary-hover-color;
     }
   }
 }
