新增 建立時間 與修正樣式

--- a/src/app/styles/TodoItem.module.scss
+++ b/src/app/styles/TodoItem.module.scss
@@ -9,6 +9,10 @@
   span {
     flex-grow: 1;
   }
+  div {
+    justify-items: end;
+    padding: 0 1rem;
+  }
 
   .deleteButton {
     background: $secondary-color;
