--- a/src/app/styles/TodoList.module.scss
+++ b/src/app/styles/TodoList.module.scss
@@ -1,10 +1,11 @@
 .todoContainer {
-  max-width: 400px;
+  max-width: 800px;
   margin: auto;
   background: white;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  height: 90vh;
 
   h2 {
     text-align: center;
@@ -15,4 +16,8 @@
     list-style: none;
     padding: 0;
   }
+}
+.todoUlContainer {
+  height: 70vh;
+  overflow: scroll;
 }
