--- a/src/app/styles/TodoItem.module.scss
+++ b/src/app/styles/TodoItem.module.scss
@@ -8,6 +8,7 @@
 
   span {
     flex-grow: 1;
+    padding: 0 1rem;
   }
   div {
     justify-items: end;
@@ -26,4 +27,13 @@
       background: $secondary-hover-color;
     }
   }
+}
+.todoItem input {
+  padding-right: 2rem;
+  cursor: pointer;
+}
+
+.completed {
+  color: gray;
+  text-decoration: line-through;
 }
